grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ignis-grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production-cluster-issuer"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - microservices1691715.westeurope.cloudapp.azure.com
      secretName: tls-secret-monitoring
  rules:
    - host: microservices1691715.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
